# quickjs

./: CMakeLists.txt  test_quickjs.c
quickjs/: libunicode.c  quickjs.c
